--- a/helm_charts/cluster-issuer/templates/cluster-issuer.yaml
+++ b/helm_charts/cluster-issuer/templates/cluster-issuer.yaml
@@ -4,7 +4,7 @@ metadata:
   name: letsencrypt-staging
 spec:
   acme:
-    email: {{ .Values.letsencrypt_email }}
+    email: osamakamelmohamed6@gmail.com
     server: https://acme-staging-v02.api.letsencrypt.org/directory
     privateKeySecretRef:
       name: letsencrypt-staging
@@ -19,7 +19,7 @@ metadata:
   name: letsencrypt-production
 spec:
   acme:
-    email: {{ .Values.letsencrypt_email }}
+    email: osamakamelmohamed6@gmail.com
     server: https://acme-v02.api.letsencrypt.org/directory
     privateKeySecretRef:
       name: letsencrypt-production
